--- a/index.html
+++ b/index.html
@@ -56,5 +56,5 @@
     </div>
 </body>
 <script src="js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
+<script src="main.js"></script>
 </html>
